2005-12-27  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* input/regression/stem-direction-context.ly: remove rest.

	* lily/melody-engraver.cc (process_music): restart for bar lines.
	(acknowledge_slur): restart for slurs.

2005-12-27  Heikki Junes  <hjunes@cc.hut.fi>

	* Documentation/user/invoking.itely: describe how to view SVG 
	output using Inkscape which replace embedded fonts with OTF fonts.

2005-12-25  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* lily/relocate.cc (set_relocation): set PANGO_PREFIX

2005-12-23  Jan Nieuwenhuizen  <janneke@gnu.org>

	* lily/melody-engraver.cc (class Melody_engraver): Remove lying
	comment.

2005-12-23  Han-Wen Nienhuys  <hanwen@xs4all.nl>

	* VERSION (PACKAGE_NAME): release 2.7.25

	* Documentation/topdocs/NEWS.tely (Top): document new feature.

	* input/regression/stem-direction-context.ly: new file.

	* lily/relocate.cc (set_relocation): add PANGO_PREFIX

	* lily/melody-engraver.cc (acknowledge_stem): restart MelodyItem
	on rest.

	* ly/engraver-init.ly: add Melody_engraver

	* lily/beam.cc (calc_direction): use default-direction
	iso. get_default_direction()

	* scm/define-grob-properties.scm (all-user-grob-properties): add
	default-direction property.

	* scm/define-grobs.scm (all-grob-descriptions): add MelodyItem.

	* lily/stem.cc (calc_default_direction): remove
	Stem::get_default_direction, use default-direction with callback
	instead.

	* lily/melody-spanner.cc (calc_neutral_stem_direction): 

	* lily/melody-engraver.cc: new file. Acknowledge stems for
	interpolated stem directions. 

	* lily/melody-spanner.cc: new file. Interpolate stem directions.

	* scm/define-grobs.scm (all-grob-descriptions): add MelodyItem

	* lily/slur-configuration.cc (fit_factor): more robust check for
	point in curve X-extent.

	* lily/slur.cc (outside_slur_callback): return offset_scm, not 0.
	(outside_slur_callback): check for 'outside avoidance.

	* lily/slur-configuration.cc (score_extra_encompass): don't use