@@ -51,6 +51,16 @@ set_env_file (char const *key, String value)
 }
 
 static int
+set_env_dir (char const *key, String value)
+{
+  if (is_dir (value))
+    return sane_putenv (key, value, false);
+  else if (be_verbose_global)
+    warning (_f ("no such directory: %s for %s", value, key));
+  return -1;
+}
+
+static int
 prepend_env_path (char const *key, String value)
 {
   if (is_dir (value))
@@ -127,7 +137,7 @@ set_relocation (String bindir, String prefix)
 				 SCM_MAJOR_VERSION, SCM_MINOR_VERSION));
   set_env_file ("PANGO_RC_FILE", sysconfdir + "/pango/pangorc");
 
-  sane_putenv ("PANGO_PREFIX", prefix, true);
+  set_env_dir ("PANGO_PREFIX", prefix);
 		
   prepend_env_path ("PATH", bindir);
 }
